--- a/talha/config.toml
+++ b/talha/config.toml
@@ -1,45 +1,74 @@
-baseurl = "https://talha-altair.github.io/altair.github.io/"
-title = "Talha"
-author = "Altair"
-canonifyurls = true
-languagecode = "en"
-theme = "hugo-tanka"
-
-enableEmoji = true
-hasCJKLanguage = false
-
-pygmentsstyle = "vs"
-pygmentscodefences = true
-
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
+#Uncomment as needed
+baseurl = "https://talha-altair.github.io/altair-hugo/"
+languageCode = "en-us"
+Title = "Talha Altair"
+# Copyright notice. This is displayer in the footer.
+# copyright = "&copy; Copyright notice"
+theme = "potato-dark"
 
 [params]
-  sitename = "Hugo Tanka Theme"
-  faviconfile = "images/favicon.png"
-  highlightjs = true
-  highlightjslanguages = ["r", "python", "stan"]
-  uselatex = true
-  progressively = false
-# commentsrepo = "user/repo"
+  paginate = 10
+  # Social accounts. Link to these accounts are displayed in the header and
+  # footer
+  # twitter = "Your Twitter username"
+  # facebook = "Your Facebook username"
+  # instagram = "Your Instagram username"
+  # github = "Your GitHub username"
+  # gitlab = "Your GitLab username"
+  # npm = "Your npm username"
+  # codepen = "Your CodePen username"
+  # dribbble = "Your Dribbble username"
+  # fivehundredpx = "Your 500px username" # 500px
+  # flickr = "Your Flickr username"
+  # pinterest = "Your Pinterest username"
+  # tumblr = "Your Tumblr username"
+  # vimeo = "Your Vimeo username"
+  # youtube = "Your YouTube username"
+  # linkedin = "Your LinkedIn username"
+  # # Disqus shortname
+  # disqus = ""
+  # # Google Analytics API key.
+  # ga_api_key = "Your Google Analytics tracking id"
+  # # Logo image. This is displayed ogp image.
+  # logo = "/path/to/logo"
+  # favicon = "/path/to/favicon"
 
-[markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
-
-[[menu.primary]]
+[[menu.main]]
     name = "Home"
     url = "/"
     weight = 1
-[[menu.primary]]
-    name = "About"
-    url = "/about/"
-    weight = 2
-[[menu.primary]]
-    name = "GitHub"
-    url = "https://github.com/Talha-Altair?tab=repositories"
-    weight = 3
-[[menu.primary]]
-    name = "Subscribe"
-    url = "/index.xml"
-    weight = 5
+
+# [[menu.main]]
+#     name = "About"
+#     url = "/about"
+#     weight = 2
+
+# [[menu.main]]
+#     identifier = "theme"
+#     name = "Theme"
+#     weight = 3
+
+[related]
+  # Only include matches with rank >= threshold. This is a normalized rank between 0 and 100.
+  threshold = 80
+
+  # To get stable "See also" sections we, by default, exclude newer related pages.
+  includeNewer = false
+
+  # Will lower case keywords in both queries and in the indexes.
+  toLower = false
+
+  [[related.indices]]
+  name = "keywords"
+  weight = 150
+  [[related.indices]]
+  name  = "author"
+  toLower = true
+  weight = 30
+  [[related.indices]]
+  name  = "tags"
+  weight = 100
+  [[related.indices]]
+  name  = "date"
+  weight = 10
+  pattern = "2017"
